--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"model:compile:fr": "yarn --cwd ./nosgestesclimat/ compile:fr",
 		"model:rules-watch": "yarn --cwd ./nosgestesclimat/ compile:rules-watch",
 		"serve": "webpack serve --mode development --config webpack.dev.js",
-		"start": "yarn run serve & yarn run model:watch",
+		"start": "yarn run serve & yarn run model:rules-watch",
 		"dev": "yarn run model:compile:fr && yarn run serve",
 		"compile": "NODE_ENV=production yarn run webpack --config webpack.prod.js",
 		"stats": "webpack --config webpack.prod.js --profile --json > stats.json",
@@ -139,6 +139,7 @@
 		"mini-css-extract-plugin": "^2.6.1",
 		"node-fetch": "^3.2.10",
 		"path-browserify": "^1.0.1",
+		"piscina": "^3.2.0",
 		"process": "^0.11.10",
 		"publicodes": "1.0.0-beta.67",
 		"publicodes-react": "^1.0.0-beta.66",
